[tool.poetry]
name = "testfinder"
version = "0.0.1"
description = "Find test cases on a Python project."
authors = ["Sid Mitra <testfinder@sidmitra.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pytest", "django", "testing"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
testfinder = "testfinder:main"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = []
line_length = 88
multi_line_output = 3
